# Machine-Mgt-server

./: .env  .gitignore  alembic.ini  main.py  private.pem  public.pem  pyproject.toml  scratch_test.py  settings.py
migrations/: env.py
migrations/versions/: 09adb6fc161a_create_department_table.py  298fe58cf30d_create_exhaust_air_table.py  30b0a3ab0f0c_create_refresh_tokens_table.py  34dab9f97830_create_users_table.py  634a29b15217_create_electrical_table.py  9490334c9741_create_machine_materialized_view.py  ccdbd33de2cc_create_machine_table.py  fe339cb0033d_create_compressed_air_table.py
src/config/: __init__.py  database.py
src/controller/: __init__.py  all_machine_controller.py  auth_controller.py  compressed_air_controller.py  department_controller.py  electrical_controller.py  exhaust_air_controller.py  machine_controller.py
src/helper/: auth.py  dependencies.py  handler.py
src/model/: __init__.py  compressed_air.py  department.py  electrical.py  exhaust_air.py  machine.py  machine_mv.py  refresh_token.py  user.py
src/repository/: __init__.py  all_machine_repo.py  compressed_air_repo.py  dept_repo.py  electrical_repo.py  exhuast_air_repo.py  machine_repo.py  token_repo.py  user_repo.py
src/routes/: __init__.py  auth_route.py  compressed_air_routes.py  dept_routes.py  electrical_routes.py  exhaust_air_routes.py  machine_routes.py  machine_view_routes.py
src/validator/: __init__.py  all_machine_filter.py  auth_validator.py  base_validator.py  compressed_air_validator.py  dept_validator.py  electrical_validator.py  exhaust_air_validator.py  (+3 more)
