[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

# 👇 THIS IS THE FIX
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
starlette = ">=0.50.0,<0.51.0"
fastapi = { version = ">=0.122.0,<0.123.0", extras = ["standard"] }
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }
alembic = ">=1.17.2,<2.0.0"
sqlalchemy = { version = ">=2.0.44,<3.0.0", extras = ["postgresql-asyncpg"] }
pydantic = ">=2.12.5,<3.0.0"

[tool.poetry.scripts]
dev = "main:run"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
